fixed cursor on certain points of the page cutting off animation issue

--- a/med-cabinet/src/components/Landing.css
+++ b/med-cabinet/src/components/Landing.css
@@ -13,7 +13,6 @@ body {
     width: 20%;
     height: 1px;
     background: none;
-    padding-top: 1%;
     margin: 0 auto;
     z-Index: 1;
     flex-flow: row nowrap;
